--- a/Charlie.Monitor/Charlie.Monitor/Charlie.Monitor.csproj
+++ b/Charlie.Monitor/Charlie.Monitor/Charlie.Monitor.csproj
@@ -6,6 +6,10 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Microsoft.Extensions.Hosting" Version="5.0.0"/>
+        <PackageReference Include="Microsoft.Extensions.Hosting" Version="5.0.0" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\Charlie.Monitor.Library\Charlie.Monitor.Library.csproj" />
     </ItemGroup>
 </Project>
