Updated application settings dependency injection

--- a/Charlie.Monitor/Charlie.Monitor/appsettings.json
+++ b/Charlie.Monitor/Charlie.Monitor/appsettings.json
@@ -1,9 +1,41 @@
 {
+  "ApplicationSettings": {
+    "ApplicationName": "Charlie.Monitor"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
-  }
+  },
+  "Serilog": {
+    "Using": [ "SeriLog.Sinks.Console", "Serilog.Sinks.File", "Serilog.Sinks.Async" ],
+    "MinimumLevel": {
+      "Default": "Debug",
+      "Override": {
+        "Microsoft": "Warning",
+        "System": "Warning"
+      }
+    },
+    "WriteTo": [
+      {
+        "Name": "Console"
+      },
+      {
+        "Name": "File",
+        "Args": {
+          "path": "Logs/runtime-.log",
+          "outputTemplate": "{Timestamp:o} [{Level:u3}] ({SourceContext}) {Message}{NewLine}{Exception}",
+          "rollingInterval": "Day",
+          "retainedFileCountLimit": 7
+        }
+      }
+    ],
+    "Enrich": [ "FromLogContext", "WithMachineName", "WithThreadId" ],
+    "Properties": {
+      "Application": "Charlie.Monitor"
+    }
+  },
+  "AllowedHosts": "*"
 }
