--- a/Charlie.Monitor/Charlie.Monitor/appsettings.json
+++ b/Charlie.Monitor/Charlie.Monitor/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ApplicationSettings": {
-    "ApplicationName": "Charlie.Monitor"
+    "ApplicationName": "Charlie.Monitor",
+    "AuthorizedUsers": ["Administrator", "DefaultAccount"]
   },
   "Logging": {
     "LogLevel": {
