--- a/Charlie.Monitor/Charlie.Monitor.Library/Charlie.Monitor.Library.csproj
+++ b/Charlie.Monitor/Charlie.Monitor.Library/Charlie.Monitor.Library.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Cassia" Version="2.0.0.60" />
     <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="5.0.0" />
     <PackageReference Include="Serilog" Version="2.10.0" />
     <PackageReference Include="Serilog.Extensions.Hosting" Version="4.1.2" />
